Fixed some issues with spacing at md size.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,214 +1,146 @@
 * {
-	padding: 0;
-	margin: 0;
-	color: #777777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 }
 
 body {
-	display: flex;
-	height: 100vh;
-	flex-direction: column;
-	background-image: url('../images/dynamic-style.png');
+  background-image: url("../images/dynamic-style.png");
+}
+
+li,
+a {
+  color: #777777 !important;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
-h1 {
-	font-family: 'Georgia', Times, 'Times New Roman', serif;
+h1,
+h4,
+h5 {
+  font-family: "Georgia", Times, "Times New Roman", serif;
+}
+
+h4 {
+  color: #4aaaa5;
+  border-bottom: 2px solid #dddddd;
+  padding: 10px 0;
 }
 
 /*        */
 /* header */
 /*        */
+.container-fluid {
+  width: 100%;
+}
 
 .navbar {
-	background: #ffffff;
-	border-bottom: 2px solid #cccccc;
-	margin: 0 auto;
-	padding: 0;
+  background: #ffffff;
+  border-bottom: 2px solid #cccccc;
+  padding: 0;
 }
 
-.left {
-	text-align: center;
-	height: 100%;
-	background: #4aaaa5;
-	color: #ffffff;
-	padding: 20px;
-	margin: 0 auto;
+.rowH1 {
+  background: #4aaaa5;
+  height: 100%;
+  margin: 0;
+  padding: 20px;
+  color: #ffffff;
+  font-size: 24pt;
+  font-weight: bold;
+  text-align: center;
+  font-family: "Georgia", Times, "Times New Roman", serif;
 }
 
-.left h1 {
-	color: #ffffff;
+.list-group-item {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
 }
 
-.right {
-	font-size: 14pt;
-	margin: 0 auto;
-}
-
-.right li {
-	float: right;
-	list-style-type: none;
-	padding: 15px 0 15px 15px;
-	line-height: 200%;
-	font-size: 14pt;
-}
-
-main {
-	padding-top: 20px;
-	flex: 1 0 auto;
-}
-
+/*           */
+/* Container */
+/*           */
 .container {
-	margin: 0 auto;
-	width: 920px;
-	border: 1px solid #dddddd;
-	background: #ffffff;
-	padding: 20px;
+  border: 1px solid #dddddd;
+  background: #ffffff;
+  padding: 20px;
 }
 
 .container h1 {
-	color: #4aaaa5;
-	border-bottom: 2px solid #dddddd;
-	padding: 10px 0;
-}
-
-/*            */
-/* index.html */
-/*            */
-
-#blurb p {
-	padding: 10px;
-	line-height: 150%;
+  color: #4aaaa5;
+  border-bottom: 2px solid #dddddd;
+  padding: 10px 0;
 }
 
 #blurbPic {
-	float: left;
-	padding-top: 10px;
-	padding-right: 10px;
+  max-width: 100%;
+  height: auto;
+}
+
+/*        */
+/* footer */
+/*        */
+.footer {
+  border-top: 8px solid #4aaaa5 !important;
+  background: #666666 !important;
+  height: 40px;
+}
+
+#copyright {
+  margin: 0 auto;
+  font-size: 10px;
+}
+
+/*				*/
+/* contact.html */
+/*				*/
+
+#submit {
+  border-radius: 0;
+  background: #4aaaa5;
+  color: #ffffff;
 }
 
 /*                */
 /* portfolio.html */
 /*                */
 
-#portfolio {
-	position: relative;
-	height: 608px;
-}
-
 .portfolio {
-	position: absolute;
-	height: 180px;
-	width: 280px;
-	margin: 20px;
-	border: 1px solid black;
-	text-align: center;
+  overflow: hidden;
+  text-align: center;
+  padding: 0;
 }
 
-#minesweeper {
-	left: 0;
-	top: 0;
-	background-image: url('../images/minesweeper.png');
+.portfolio h5 {
+  position: absolute;
+  color: #ffffff;
+  background: #4aaaa5;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-#fart {
-	left: 320px;
-	top: 0px;
-	background-image: url('../images/fart.png');
+.carousel-caption {
+  max-width: 100%;
+  width: 100%;
+  background-color: #ffb81c;
+  left: 0;
 }
 
-#howold {
-	left: 0;
-	top: 200px;
-	background-image: url('../images/howold.png');
+@media (max-width: 640px) {
+  .navHeader {
+    padding: 0 !important;
+  }
+
+  .rowH1 {
+    margin: 0 !important;
+  }
 }
 
-#msud {
-	left: 320px;
-	top: 200px;
-	background-image: url('../images/msud.png');
-}
-
-#note {
-	left: 0;
-	top: 420px;
-	background-image: url('../images/note.png');
-}
-
-.portfolio h4 {
-	background: #4aaaa5;
-	color: #ffffff;
-	padding: 10px 0;
-	margin-top: 120px;
-}
-
-/*              */
-/* contact.html */
-/*              */
-
-/* #contact {
-	position: relative;
-	height: 50%;
-}
- */
-form {
-	padding-top: 20px;
-}
-
-#name,
-#email,
-#message {
-	margin-top: 5px;
-	margin-bottom: 10px;
-	width: 100%;
-}
-
-#name,
-#email {
-	width: 100%;
-	padding: 5px;
-}
-
-#message {
-	height: 230px;
-}
-
-#submit {
-	border: none;
-	background: #4aaaa5;
-	color: #ffffff;
-	padding: 5px 15px;
-	text-align: center;
-}
-
-/*        */
-/* footer */
-/*        */
-
-footer {
-	flex-shrink: 0;
-	border-top: 8px solid #4aaaa5;
-	background: #666666;
-	height: 40px;
-	text-align: center;
-}
-
-#copyright {
-	display: inline-block;
-	padding-top: 26px;
-	font-size: 10px;
-}
-
-/*       */
-/* media */
-/*       */
-
-@media (max-width: 768px) {
-	.container {
-		width: 600px;
-	}
+@media (min-width: 641px) {
+  .list-group-item {
+    padding-left: 0 !important;
+  }
 }
